--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/starlight": "^0.37.1",
+    "@astrojs/svelte": "^7.2.4",
     "astro": "^5.6.1",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "svelte": "^5.46.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
