--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/starlight": "^0.37.1",
     "@astrojs/svelte": "^7.2.4",
+    "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.6.1",
     "sharp": "^0.34.2",
     "svelte": "^5.46.1"
